--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,3 +25,5 @@ jobs:
       - name: Run test suite
         run: |
           pipenv run pytest
+      - name: Format
+        uses: rickstaa/action-black@v1.1.14
