--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,5 +25,8 @@ jobs:
       - name: Run test suite
         run: |
           pipenv run pytest
+      - name: Run test coverage
+        run: |
+          pipenv run pytest --cov=app
       - name: Format
         uses: rickstaa/action-black@v1.1.14
